Add image W2V vs Transformer

--- a/NLPDoc2Vec.ipynb
+++ b/NLPDoc2Vec.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNz+Vz9ZnruCEwzRY5kcB3v",
+      "authorship_tag": "ABX9TyPzuUkGv9uM84CXmF04VH1y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2568,7 +2568,10 @@
         "  * 512 Token limit (less [CLS] and [SEP])\n",
         "  * Truncate the documents to the max length \n",
         "  * Chunk the text (make multiple documents)\n",
-        "  * Drop middle tokens (keep beginning and end)"
+        "  * Drop middle tokens (keep beginning and end)\n",
+        "\n",
+        "## Word2Vec vs Transformer\n",
+        "![](https://qph.fs.quoracdn.net/main-qimg-b46d83b2eee2d5875f469b22a494db6e)"
       ]
     },
     {
