--- a/BagOfWords.ipynb
+++ b/BagOfWords.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKyYIYtAep+HHwDrEIShYc",
+      "authorship_tag": "ABX9TyOQKlslPwA+FMMJDF1wpCzf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "\n",
         "from textblob import TextBlob"
       ],
-      "execution_count": 1,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -5357,6 +5357,20 @@
             "0.5118436409090338 0.24973387569406813 0.3057994670668329\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "My0RV1a4vLGW"
+      },
+      "source": [
+        "# Notes on BM25\n",
+        "* A long document, would likely have a more diverse set of words compared to a short document\n",
+        "  * Would it be surprising to see \"regression\" in a document of length 1,000,000?\n",
+        "  * If the word regression appeared in a document of length 1,000 three times, it seems much more important.\n",
+        "* BM25 Adjusts TF-IDF for document length\n",
+        "* Not implemented in Sklearn, but easy to find implementations"
       ]
     }
   ]
