--- a/RoBERTa_XLNet_ELECTRA.ipynb
+++ b/RoBERTa_XLNet_ELECTRA.ipynb
@@ -10,7 +10,7 @@
         "p-oy9GE98EIg"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPNRPaq2AHVZg86PjCARFtE",
+      "authorship_tag": "ABX9TyNioYh1SyOG/e+60OD49WA5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3832,7 +3832,7 @@
         "id": "5S5YbnGvmoOU",
         "outputId": "451a5a15-81c3-43c5-c303-5b0b381c7032"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3932,7 +3932,7 @@
       "metadata": {
         "id": "cxc8jMI6mq7x"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3970,7 +3970,7 @@
         "id": "BkHN1xr-m2o0",
         "outputId": "47c2aa42-d839-41d3-f377-bbc0fceb7638"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4008,7 +4008,7 @@
         "id": "STrEA1Q7rIr8",
         "outputId": "329fb0eb-5b0b-4334-d71a-8ef4277335f4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4053,7 +4053,7 @@
       "metadata": {
         "id": "hyHZXPCiFCh9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4083,7 +4083,7 @@
       "metadata": {
         "id": "D_zsHYA-DeR3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4094,7 +4094,7 @@
       "metadata": {
         "id": "ujPCz9c06jUT"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4129,10 +4129,22 @@
         "  * 10% replace word randomly\n",
         "* Process\n",
         "  * Mask tokens in pre-training\n",
-        "  * Duplicate data 10 times masking differently each time\n"
+        "  * Duplicate data 10 times masking differently tokens each time\n"
       ],
       "metadata": {
         "id": "jeMlMx660FSp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Next Sentence Prediction\n",
+        "* Does sentence two follow sentence one\n",
+        "* 50% yes, 50% no\n",
+        "* Select next sentence randomly"
+      ],
+      "metadata": {
+        "id": "eKwcvQum3k23"
       }
     },
     {
@@ -4144,7 +4156,7 @@
       "metadata": {
         "id": "lqxtZmI0rTe7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4184,7 +4196,7 @@
         "id": "TfwV3rnwm5sp",
         "outputId": "cd56b2ac-db6e-42a3-af10-788df5647b27"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4222,7 +4234,7 @@
         "id": "dvMCFHFKm9sw",
         "outputId": "69e06f08-b358-40ed-f28a-e7cebccc9173"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4270,7 +4282,7 @@
         "id": "IySOQaSBnCbp",
         "outputId": "8d1f5e62-1e3e-4322-e675-275d45054f1d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4297,7 +4309,7 @@
         "id": "iA7In4qEnG-Z",
         "outputId": "7dcc1c2c-de9e-4305-b940-639d9fa76745"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4344,7 +4356,7 @@
       "metadata": {
         "id": "f6zqFBmIsFZz"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4365,7 +4377,7 @@
         "id": "Olhg-mT-sxy2",
         "outputId": "b1bb7768-f91c-4b57-eaf8-82a75100885a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4616,7 +4628,7 @@
         "id": "gm0hSBORtcg-",
         "outputId": "e045d3d9-e15a-44c1-a779-96921aea60fa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4679,7 +4691,7 @@
         "id": "pUry7wRAzJuw",
         "outputId": "d6315c6a-658c-440b-e5a6-fc6b35fb5f22"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4774,6 +4786,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "![](https://iq.opengenus.org/content/images/2020/12/RoBERTa-for-NSP.jpg)"
+      ],
+      "metadata": {
+        "id": "DWZePcm3hkDW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Batch Sizes\n",
         "* BERT trained batch size 256 for 1MM steps\n",
         "* RoBERTa increases batch sizes to 2K\n",
@@ -4811,7 +4832,7 @@
         "id": "Xpuh7j8hBEa_",
         "outputId": "4982b7b0-a06e-46bb-cd14-73e0dbb4f355"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4921,7 +4942,7 @@
         "id": "7Cr6TzcFCttU",
         "outputId": "08a4d29b-5212-4992-8d47-0829c7e90a6a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4965,7 +4986,7 @@
         "id": "GgUjTS_sC1T1",
         "outputId": "138290db-4e10-435b-cc0a-77b2b68f8f7c"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5013,7 +5034,7 @@
         "id": "4jluRBXnDAqi",
         "outputId": "133628dc-eaf0-4bfa-b77f-8a5c2ee3e153"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5106,7 +5127,7 @@
         "id": "Hp0mglAgDOXi",
         "outputId": "6c7bc7cc-38ce-4566-9e85-4482f4f4a78a"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5136,7 +5157,7 @@
         "id": "sqg7Hj5-Daew",
         "outputId": "0b3da85b-d632-4c4a-dede-dc85dce39479"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5387,7 +5408,7 @@
         "id": "WTiJuVPXDpA-",
         "outputId": "e4afecdc-2a12-4003-860d-422203883992"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5450,7 +5471,7 @@
         "id": "1ni73qr9DpDG",
         "outputId": "0fa3f143-a69d-41da-e406-5ff8968bbe61"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5505,10 +5526,71 @@
         "  * XLNet: log p(New | is a city) + log p(York | New, is a city)\n",
         "* Consider all possible orderings\n",
         "  * Randomly shuffle owrdering of words\n",
-        "  * See many variants, and maintain auto-regressive approach"
+        "  * See many variants, and maintain auto-regressive approach\n",
+        "* Mask Spans"
       ],
       "metadata": {
         "id": "ebN129UwHZUd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](https://miro.medium.com/max/1400/1*RGdAU7tXXKqckbDjhoIWmQ.png)"
+      ],
+      "metadata": {
+        "id": "zi-f4QsDHZY5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Two-Stream Self-Attention\n",
+        "* Decide the position of next predicted token\n",
+        "* Content stream builds hidden similar to Transformer\n",
+        "* Query stream predicts next token and uses position as input to decide which token to predict "
+      ],
+      "metadata": {
+        "id": "1oarBaWboQ7o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![](http://blog.feedly.com/wp-content/uploads/2019/06/Screen-Shot-2019-06-21-at-4.22.41-PM.png)"
+      ],
+      "metadata": {
+        "id": "8lbQezbuo0-f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Query Stream\n",
+        "* Getting the query vector\n",
+        "* Prevents leaking the word you're interested in predicting\n",
+        "* X[1..4] = Embeddings of words\n",
+        "* w[1..4] = Randomized \n",
+        "* https://shaojiejiang.github.io/post/en/xlnet/\n",
+        "![](https://shaojiejiang.github.io/post/en/xlnet/images/query_stream_hued03336a8aeea8af3524f5a71c4c5e85_138678_1200x1200_fit_lanczos_3.png)"
+      ],
+      "metadata": {
+        "id": "8ZTy06sQ5WZs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Content Stream\n",
+        "* Getting Key and Value Vectors\n",
+        "* Standard transformer decoder\n",
+        "* Can see hidden of token to be predicted and prior tokens\n",
+        "* https://shaojiejiang.github.io/post/en/xlnet/\n",
+        "\n",
+        "![](https://shaojiejiang.github.io/post/en/xlnet/images/content_stream_hude0ab6174270e4e71fb20a58d5784b5d_120246_1200x1200_fit_lanczos_3.png)"
+      ],
+      "metadata": {
+        "id": "6u3bKAsc5aSB"
       }
     },
     {
@@ -5521,15 +5603,6 @@
       ],
       "metadata": {
         "id": "x1ibF7uEHZW4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "![](https://miro.medium.com/max/1400/1*RGdAU7tXXKqckbDjhoIWmQ.png)"
-      ],
-      "metadata": {
-        "id": "zi-f4QsDHZY5"
       }
     },
     {
@@ -5591,7 +5664,7 @@
         "id": "qvI3Uj6cQPaO",
         "outputId": "f324712c-730f-413c-8a2c-4861537c5256"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5823,7 +5896,7 @@
         "id": "NGjpgfbLQLKr",
         "outputId": "a336776c-b4a2-4d7d-e648-15648a7cb942"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5888,7 +5961,7 @@
         "id": "o9yRt-6DQNQE",
         "outputId": "98f6bfcf-11e8-4ff5-b586-40f5fc696ce3"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5950,7 +6023,7 @@
         "id": "Txb9F0jPQIbu",
         "outputId": "96672439-6995-4524-eaf3-b815ee74ed7b"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6082,7 +6155,7 @@
         "id": "5OlVXXq3QDFr",
         "outputId": "c66eee32-37e0-4526-bd35-67c524d4ab1b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6112,7 +6185,7 @@
         "id": "hjynH9mlQDIR",
         "outputId": "9130cf8e-126c-4c35-9633-94282d4beb74"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6363,7 +6436,7 @@
         "id": "46zI_pIiP83q",
         "outputId": "ee06a46b-d679-4887-8100-a88ec86043b1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6426,7 +6499,7 @@
         "id": "1ABxfY4aP81b",
         "outputId": "b09fdde9-688b-425d-cf5b-9c567bbf97b7"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6474,7 +6547,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Corrupt Token Detection\n",
+        "### Corrupt / Replaced Token Detection\n",
         "* Rather than use masked language modeling\n",
         "* Corrupt tokens in the input\n",
         "* Solves the mismatch between [MASK] in training and not in test data"
@@ -6486,8 +6559,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "![](https://1.bp.blogspot.com/-CYdmy-CavFQ/XmfA7gPlDxI/AAAAAAAAFaw/QV_m8U6m82wKIJOV6XckhBRrET_DOTqawCEwYBhgLKskDAMBZVoDkAXgBeYLK0UlPs8KTLC000nVXlb_Vf0ViyBhl7daowMj46skeP5iBS15xmM9P2Y7l6GgUXKwATCbwSw5j3fIuStwsfGXY4eDyE_xP-dk4vYEkjn-6EoBR8bj-yTxWRmVLl3QKpt9xQyMVEv4Fq4Lq5xNshTm2UuGOfrntf_83f7CGsEaAQYtY33St2jCXTL-MMUZohpk9AZaIvZsHtvYElDJ8k0JmVJYGukD73BFnibrv-dw4dBolN8aOtcrIBgn7D-IkUW1bul0_Fzzmhf6L410ngtGsA3HR8PGFGUL8Xv0Unl2lW58Sv2bNeJSFLnyyTsp5d63vorjL9NnMPJgFtIRor1t0-_1XJIk9e1NRUDkn63CPlFjkl1LGYjbc_cEgyMhX431SM8RBE-AqTbR1I7tpu-IkbIzpmfVCxqQSYW1rPhDzn9T6dXT3GxI7mHy7AKfuRDj24nT5cj3Fx8opS5ygDDa582vdxmxIR8pz1Ly3lzKKPGdVVqZhhIlXKGJXpOnsEeELFEyPoq95SwmHG-BBK07_tyR0qySY3wI3Ks-r5v4YoYVw88GZ0JW1V5_jgcBQV5TOTZLGR7aZK4NV9TwcZTC2hJ_zBQ/s1600/image4.gif)"
+      ],
+      "metadata": {
+        "id": "ygMguUV8ixuI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Generator - Discriminator\n",
-        "* Discriminator and Generator equates to twice the parameters and size / compute\n",
+        "* Model will be \"depenedent\" on how hard the replacements are to detect\n",
+        "* Discriminator and Generator \n",
+        "  * Equates to twice the parameters and size / compute\n",
         "  * Best results obtained using a small MLM to corrupt tokens\n",
         "  * Finds a generator 1/4 to 1/2 of the size performs well\n",
         "* Outperforms using a Language Model"
@@ -6510,7 +6594,8 @@
       "source": [
         "### Not Quite a GAN\n",
         "* When generator produces the correct token, it's considered real not a corrupted token\n",
-        "* No noise vector is added to the generator\n"
+        "* No noise vector is added to the generator\n",
+        "* Paper explores this distinction\n"
       ],
       "metadata": {
         "id": "p1cXEb9pKRUa"
@@ -6559,7 +6644,7 @@
         "id": "H_m5ke0CEcPb",
         "outputId": "5ee13903-973c-4653-dc77-a644532348b9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6664,7 +6749,7 @@
         "id": "FId-LPiCE1Q-",
         "outputId": "116f5a4e-3e51-4846-acf7-8280938cbbb1"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6717,7 +6802,7 @@
         "id": "3XQfAK4hE9Hs",
         "outputId": "1cb30a8c-a5b0-4bf5-b7e5-78b1b6d6fe3b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6813,7 +6898,7 @@
         "id": "qidlkJa6FMHM",
         "outputId": "d8e15894-80b8-48bd-8950-ee2d8497dd3e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6843,7 +6928,7 @@
         "id": "BgWf4CFvFMFK",
         "outputId": "953bb5ef-e44d-4171-a07c-b4d8dac307e2"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7096,7 +7181,7 @@
         "id": "TzIrBfiIFTcr",
         "outputId": "49dd7835-76cd-4ad9-cdfa-3718345328ce"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7159,7 +7244,7 @@
         "id": "lUirAIwnFTe4",
         "outputId": "a667775f-b0fb-47fa-e5b7-b18947502d08"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7203,7 +7288,7 @@
         "id": "HuRy4haju4WP",
         "outputId": "79a858aa-61b3-4e56-e70f-9442ecd1556a"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7225,7 +7310,7 @@
       "metadata": {
         "id": "rzCJetmDMWAQ"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7240,7 +7325,7 @@
         "id": "PaIAXnQmteGB",
         "outputId": "fae79ed2-7d0b-4855-bd7d-4d45f71c119f"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7271,7 +7356,7 @@
         "id": "w0UuolJ_wG07",
         "outputId": "e3dabc7f-6b9d-4baf-bb81-1d9f04599490"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7321,7 +7406,7 @@
         "id": "51xULYos7AQe",
         "outputId": "a52c46f2-8a79-4358-d9c1-6822f4f167bc"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7477,15 +7562,27 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# Recap\n",
+        "* BERT is over-parameterized / under-trained\n",
+        "  * Masked Language Model\n",
+        "  * Next Sentence Prediction\n",
+        "* RoBERTa\n",
+        "  * Drop NSP, Full Sentences\n",
+        "  * Train Longer w/ Larger Batch Sizes\n",
+        "  * Larger Vocabulary (GPT)\n",
+        "  * More Data\n",
+        "* XLNet\n",
+        "  * PLM - Permuted Language Model\n",
+        "* ELECTRA\n",
+        "  * Generative - Discriminitive Model\n",
+        "  * Corrupted / Replaced Token Detection\n",
+        "  * Faster Convergence * Training"
       ],
       "metadata": {
         "id": "RJC_RlWtzTgV"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     }
   ]
 }
