--- a/ALBERT_DistilBERT_MobileBERT.ipynb
+++ b/ALBERT_DistilBERT_MobileBERT.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOGjkariqym4VVcy+Fb8pg5",
+      "authorship_tag": "ABX9TyM2vdal5zoav4lWAO91SYZo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5718,7 +5718,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 217,
+          "height": 218,
           "referenced_widgets": [
             "78a24fc5c19147aeb48144fc4be8dd6c",
             "702905fa3f2441178fc943f4da9bfe33",
@@ -6638,7 +6638,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 270
         },
         "id": "TJp5rq4Sa3_J",
         "outputId": "0bef76af-cefb-485a-b65a-a923dc92c14f"
@@ -6867,7 +6867,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121,
+          "height": 122,
           "referenced_widgets": [
             "7484b41264734a6b96eaf68bd2689108",
             "aa86c736c4be4b9b887d7458336dc20f",
@@ -7300,7 +7300,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 270
         },
         "id": "_IjVNGJsJyFB",
         "outputId": "34e221f4-43b8-43ef-98c5-c03a512df34b"
@@ -8011,7 +8011,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 270
         },
         "id": "ycAfxgobrqE0",
         "outputId": "5c066709-2161-4a41-881f-8ff1733d1818"
@@ -8679,7 +8679,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 270
         },
         "id": "m3ZpkiOJs7_-",
         "outputId": "7f7d0c73-cf3d-48e2-ca88-5265ca7e4872"
@@ -8750,7 +8750,8 @@
       "cell_type": "markdown",
       "source": [
         "## Architecture\n",
-        "* Main idea - rather than reduce the number of layers, keep them, but reduce the size of the hidden parameters"
+        "* Main idea - rather than reduce the number of layers, keep them, but reduce the size of the hidden parameters\n",
+        "* 4.3x Smaller and 5.5x Faster with Similar Performance"
       ],
       "metadata": {
         "id": "dT3-mn9irPHW"
@@ -8946,7 +8947,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 150,
+          "height": 151,
           "referenced_widgets": [
             "a6414cb77a3d42cebd1a100bd3774586",
             "941a007c14804a71801e47cb98d6cfb4",
@@ -9438,7 +9439,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 270
         },
         "id": "me-emKAttlIr",
         "outputId": "fac9b425-450b-404f-8a3e-9175a85b3d44"
